nginx-ingress/ingress-tls-example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - example.fabijanbajo.com
    secretName: tls-secret
  rules:
  - host: example.fabijanbajo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 80
